--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,65 +1,60 @@
 name: CI
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Docker Setup Buildx
+      - name: Build and push Docker images
         # You may pin to the exact commit or the version.
-        # uses: docker/setup-buildx-action@0d135e0c2fc0dba0729c1a47ecfcf5a3c7f8579e
-        uses: docker/setup-buildx-action@v1.3.0
+        # uses: docker/build-push-action@e1b7f96249f2e4c8e4ac1519b9608c0d48944a1f
+        uses: docker/build-push-action@v2.4.0
         with:
-          # Buildx version. (eg. v0.3.0)
-          version: # optional
-          # Sets the builder driver to be used
-          driver: # optional, default is docker-container
-          # List of additional driver-specific options. (eg. image=moby/buildkit:master)
-          driver-opts: # optional
-          # Flags for buildkitd daemon
-          buildkitd-flags: # optional, default is --allow-insecure-entitlement security.insecure --allow-insecure-entitlement network.host
-          # Sets up docker build command as an alias to docker buildx
-          install: # optional, default is false
-          # Switch to this builder instance
-          use: # optional, default is true
-          # Optional address for docker socket or context from `docker context ls`
-          endpoint: # optional
-          # BuildKit config file
-          config: # optional# This is a basic workflow to help you get started with Actions
-
-      - name: Docker Buildx Bake
-        # You may pin to the exact commit or the version.
-        # uses: docker/bake-action@180a8392805afa89e4c8894e8e8f602594c07511
-        uses: docker/bake-action@v1.4.1
-        with:
+          # List of extra privileged entitlement (eg. network.host,security.insecure)
+          allow: # optional
+          # List of build-time variables
+          build-args: # optional
           # Builder instance
           builder: # optional
-          # List of bake definition files
-          files: 
-          # List of bake targets
-          targets: # optional
+          # List of external cache sources for buildx (eg. user/app:cache, type=local,src=path/to/dir)
+          cache-from: # optional
+          # List of cache export destinations for buildx (eg. user/app:cache, type=local,dest=path/to/dir)
+          cache-to: # optional
+          # Build's context is the set of files located in the specified PATH or URL
+          context: # optional
+          # Path to the Dockerfile
+          file: # optional
+          # List of metadata for an image
+          labels: # optional
+          # Load is a shorthand for --output=type=docker
+          load: # optional, default is false
+          # Set the networking mode for the RUN instructions during build
+          network: # optional
           # Do not use cache when building the image
           no-cache: # optional, default is false
+          # List of output destinations (format: type=local,dest=path)
+          outputs: # optional
+          # List of target platforms for build
+          platforms: # optional
           # Always attempt to pull a newer version of the image
           pull: # optional, default is false
-          # Load is a shorthand for --set=*.output=type=docker
-          load: # optional, default is false
-          # Push is a shorthand for --set=*.output=type=registry
+          # Push is a shorthand for --output=type=registry
           push: # optional, default is false
-          # List of targets values to override (eg. targetpattern.key=value)
-          set: # optional    
+          # List of secrets to expose to the build (eg. key=string, GIT_AUTH_TOKEN=mytoken)
+          secrets: # optional
+          # List of secret files to expose to the build (eg. key=filename, MY_SECRET=./secret.txt)
+          secret-files: # optional
+          # List of SSH agent socket or keys to expose to the build
+          ssh: # optional
+          # List of tags
+          tags: # optional
+          # Sets the target stage to build
+          target: # optional
+          # GitHub Token used to authenticate against a repository for Git context
+          github-token: # optional, default is ${{ github.token }}
